# ontology-mcp-server-RL-Stable-Baselines3

./: .dockerignore  .env.example  .gitignore  CONFIRMATION_IMPLEMENTATION_REPORT.md  DOCKER.md  Dockerfile  HUMAN_CONFIRMATION_SOLUTION.md  LICENSE  LICENSE.zh.md  README.md  README.zh.md  add_copyright.py  analyze_iteration_issue.py  clear_chroma_memory.sh  deep_diagnose.py  diagnose_chart_issue.py  diagnose_code_loading.py  diagnose_prompt_issue.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  quality_report.md  quality_report_detailed.json  requirements-dev.txt  test_chart_feature.py  test_chart_workflow.py  test_confirmation.py  test_enhanced_prompt.py  test_history_impact.py  test_intent_recognition.py  test_llm_real.py  test_llm_tool_call.py  test_multi_tool_scenario.py  test_optimized_detection.py  test_query_rewriter.py  test_repeat_detection.py  test_repeat_detection_live.py  test_rl_modules.py  test_shipment_auto_creation.py  test_shipment_workflow.py  (+3 more)
config/: training_dashboard.example.yaml
data/: ontology_commerce.ttl  ontology_ecommerce.ttl  ontology_rules.ttl  product_synonyms.json
data/chroma_memory_legacy_20251115_140140/: chroma.sqlite3
data/training_dashboard/: combined_20251116_101943.json  combined_20251116_102502.json  combined_20251116_102752.json  combined_20251116_103355.json
data/training_scenarios/: sample_dialogues.json
docs/: CHART_TROUBLESHOOTING_REPORT.md  CHART_VISUALIZATION_GUIDE.md  CONVERSATION_ANALYSIS_REPORT.md  EXECUTION_LOG_GUIDE.md  INTENT_RECOGNITION_GUIDE.md  ITERATION_LIMIT_FIX_REPORT.md  QUERY_REWRITER_GUIDE.md  SEARCH_IMPROVEMENT_PLAN.md  SHIPMENT_AUTO_CREATION_REPORT.md  VIP_Customer_Case.md  architecture_diagram-v2.drawio  architecture_diagram.drawio  interaction_flow.md  interaction_sequence_diagrams.md
docs/articles/: 01-ontology-rl-commerce-agent.md  02-agent-sequence-walkthrough.md  03-chromadb-mcp-memory-tooling.md  12-memory-intent-lessons.md  article_index.md
logs/: processes.pid
scripts/: add_bulk_products.py  add_bulk_users.py  build.sh  generate_dialogue_corpus.py  init_fts5.py  run_agent.sh  run_server.sh  run_tensorboard.sh  run_training_dashboard.py  run_training_dashboard.sh  setup_logrotate.sh  start_all.sh  start_docker.sh  stop_all.sh  update_demo_user_names.py
src/agent/: analytics_service.py  chroma_memory.py  config.example.yaml  conversation_state.py  gradio_ui.py  intent_tracker.py  llm_deepseek.py  mcp_adapter.py  memory_config.py  prompts.py  query_rewriter.py  react_agent.py  user_context_extractor.py
src/ontology_mcp_server/: commerce_service.py  config.py  db_service.py  ecommerce_ontology.py  (+2 more)
tests/: test_agent_validation.py  test_commerce_service.py  test_intent_recognition.py
(+16 files in other folders)
