[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ontology-mcp-server"
version = "0.1.0"
description = "独立的本体推理 MCP Server，提供解释、同义词归一化与 SHACL 校验能力"
authors = [{ name = "shark8848", email = "shark8848@github.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ontology", "mcp", "shacl", "owlready2", "agent"]
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic>=2.8.0,<3.0.0",
    "rdflib>=7.0.0,<8.0.0",
    "pyshacl>=0.26.0,<0.27.0",
    "owlready2>=0.46,<0.47",
    "jsonschema>=4.23.0,<5.0.0",
    "openai>=1.30.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "chromadb>=0.5.3,<0.6.0",
    # 强化学习相关
    "stable-baselines3>=2.3.0,<3.0.0",
    "gymnasium>=0.29.0,<1.0.0",
    "torch>=2.0.0,<3.0.0",
    "tensorboard>=2.14.0,<3.0.0",
    "sentence-transformers>=2.2.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "httpx>=0.27.0,<0.28.0",
    "ruff>=0.5.0,<0.6.0"
]

[project.urls]
Homepage = "https://github.com/shark8848/ontology-mcp-server"
Source = "https://github.com/shark8848/ontology-mcp-server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
